--- a/FabricsWebApplication/Views/Add/Add.cshtml
+++ b/FabricsWebApplication/Views/Add/Add.cshtml
@@ -12,7 +12,9 @@
     @Html.ValidationSummary()
 
    <ul>
-       <li>@Html.ActionLink("Add Prices","AddPricesForSupplier","Add")</li>
+       <li>@Html.ActionLink("Add Prices For Supplier","AddPricesForSupplier","Add")</li>
+       <li>@Html.ActionLink("Add Prices For Customer","AddPricesForCustomer","Add")</li>
+       <li>@Html.ActionLink("Add Delivery","AddDelivery","Add")</li>
 
    </ul>
 }
