--- a/FabricsWebApplication/Views/Create/Create.cshtml
+++ b/FabricsWebApplication/Views/Create/Create.cshtml
@@ -24,7 +24,9 @@
        <li>@Html.ActionLink("Create FabricsPlots","CreateFabricsPlots","Create")</li>
        <li>@Html.ActionLink("Create WareHouse","CreateWareHouse","Create")</li>
        <li>@Html.ActionLink("Create PurchaseInvoice","CreatePurchaseInvoice","Create")</li>
+       <li>@Html.ActionLink("Create SalesInvoice","CreateSalesInvoice","Create")</li>
        <li>@Html.ActionLink("Create PaymentForSupplier","CreatePaymentForSupplier","Create")</li>
+       <li>@Html.ActionLink("Create PaymentForCustomer","CreatePaymentForCustomer","Create")</li>
 
    </ul>
 }
