--- a/FabricsWebApplication/Views/Show/View1.cshtml
+++ b/FabricsWebApplication/Views/Show/View1.cshtml
@@ -23,6 +23,7 @@
        <li>@Html.ActionLink("View FabricsPlots","ViewFabricsPlots","Show")</li>
        <li>@Html.ActionLink("View WareHouse","ViewWareHouse","Show")</li>
        <li>@Html.ActionLink("View PurchaseInvoice","ViewPurchaseInvoice","Show")</li>
+       <li>@Html.ActionLink("View SalesInvoice","ViewSalesInvoice","Show")</li>
        <li>@Html.ActionLink("View Payment","ViewPayment","Show")</li>
        <li>@Html.ActionLink("View Record","ViewRecord","Show")</li>
 
