--- a/FabricsWebApplication/Views/Show/ViewFabricsColor.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewFabricsColor.cshtml
@@ -30,7 +30,7 @@
              @Html.DisplayFor(modelItem => ex.ColorName)
                  </td>  
                  <td>
-             @Html.DisplayFor(modelItem => ex.FabricsId)
+             @Html.DisplayFor(modelItem => ex.FabricsId.Increment)
                  </td>
            </tr>           
        }
