--- a/FabricsWebApplication/Views/Create/CreatePaymentForCustomer.cshtml
+++ b/FabricsWebApplication/Views/Create/CreatePaymentForCustomer.cshtml
@@ -21,9 +21,9 @@
               </div>
                <br />
               <div class="form-group">
-                <label class="col-sm-3" >SupplierId:</label>
+                <label class="col-sm-3" >CustomerId:</label>
                 <div class="col-sm-9">
-                   @Html.DropDownListFor(m => m.SupplierId,(IEnumerable<SelectListItem>)ViewData["SupplierId"])
+                   @Html.DropDownListFor(m => m.CustomerId,(IEnumerable<SelectListItem>)ViewData["CustomerId"])
                 </div>
               </div>
                <br />
