--- a/FabricsWebApplication/Views/Create/CreateSupplier.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateSupplier.cshtml
@@ -1,74 +1,100 @@
 ﻿@model FabricsFactoryMethodPattern.Entities.Supplier
 @{
-    ViewBag.Title = "CreateSupplier";
+    ViewBag.Title = "Supplier";
 }
 
 <hgroup class="title">
-    <h2>Create a new account @ViewBag.Title</h2>
+    <h2>Create a new @ViewBag.Title</h2>
 </hgroup>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
-            <li>
-                @Html.Label(    "First Name:")
-                @Html.TextBoxFor(m => m.FirstName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.LastName)
-                @Html.TextBoxFor(m => m.LastName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Email)
-                @Html.TextBoxFor(m => m.Email)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Address)
-                @Html.TextBoxFor(m => m.Address)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Bank.AccountNumber)
-                @Html.TextBoxFor(m => m.Bank.AccountNumber)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Bank.BankName)
-                @Html.TextBoxFor(m => m.Bank.BankName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.TaxNumber)
-                @Html.TextBoxFor(m => m.TaxNumber)
-            </li>
-             <li>
-                @Html.LabelFor(m => m.CellPhones)
-                @Html.TextBoxFor(m => m.CellPhones[0].PhoneNumber, new { @class = "cellPhone"})
-                <button type ="button" onclick ="addCellPhone()" class ="cellbutton ">Add</button>
-            </li>
-            <li>
-                @Html.LabelFor(m => m.DeskPhones)
-                @Html.TextBoxFor(m => m.DeskPhones[0].PhoneNumber, new { @class = "deskPhone"})
-                <button type ="button" onclick ="addDeskPhone()" class ="deskbutton">Add</button>
-            </li>
-           
+    <div class="col-md-8 col-md-ofset-2">
+        <form  class="form-horizontal" role="form">
+              <div class="form-group">
+                <label class="col-sm-3" for="firstname">First Name:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @id = "firstname" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="lastname">Last Name:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @id = "lastname" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="email">Email:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @id = "email" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="address">Address:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Address, new { @class = "form-control", @id = "address" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="bankname">Bank Name:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Bank.BankName, new { @class = "form-control", @id = "bankname" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="account">Account:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Bank.AccountNumber, new { @class = "form-control", @id = "account" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="tax">Tax Number:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.TaxNumber, new { @class = "form-control", @id = "tax" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="cellphone">Cell Numer:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.CellPhones[0].PhoneNumber, new { @class = "form-control cellPhone" })
+                    <button type ="button" onclick ="addCellPhone()" class ="cellbutton ">Add</button>
 
-
-        </ol>
-        <input type="submit" value="Create" />
-    </fieldset>
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="deskphone">Desk Number:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.DeskPhones[0].PhoneNumber, new { @class = "form-control deskPhone" })
+                    <button type ="button" onclick ="addDeskPhone()" class ="deskbutton">Add</button>
+                </div>
+              </div>
+            <br/>
+            <br/>
+                <input type="submit" value="Create" class="btn btn-default pull-right"/>
+        </form>
+    </div>
      <script>
         function addCellPhone() {
             var count = parseInt($(".cellPhone").last().attr("id").substring(11));
             count += 1;
-            $(".cellbutton" ).before('<br/>' + '<input class="cellPhone" id="CellPhones_'+count+'__PhoneNumber" name="CellPhones[' +count+ '].PhoneNumber" type="text" value="">');
+            $(".cellbutton").before('<input class="form-control cellPhone" id="CellPhones_' + count + '__PhoneNumber" name="CellPhones[' + count + '].PhoneNumber" type="text" value="">');
 
         }
         function addDeskPhone() {
             var count = parseInt($(".deskPhone").last().attr("id").substring(11));
             count += 1;
-            $(".deskbutton").before('<br/>' + '<input class="deskPhone" id="DeskPhones_' + count + '__PhoneNumber" name="DeskPhones[' + count + '].PhoneNumber" type="text" value="">');
+            $(".deskbutton").before('<input class="form-control deskPhone" id="DeskPhones_' + count + '__PhoneNumber" name="DeskPhones[' + count + '].PhoneNumber" type="text" value="">');
 
         }
 
