--- a/FabricsWebApplication/Views/Create/CreateWareHouse.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateWareHouse.cshtml
@@ -11,26 +11,33 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.Name)
-                @Html.TextBoxFor(m => m.Name)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Areage)
-                @Html.TextBoxFor(m => m.Areage)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Address)
-                @Html.TextBoxFor(m => m.Address)
-            </li>
-
-        </ol>
-        <input type="submit" value="Create" />
-    </fieldset>
-
+    <div class="col-md-8 col-md-ofset-2">
+        <form  class="form-horizontal" role="form">
+              <div class="form-group">
+                <label class="col-sm-3" for="name">Name:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @id = "name" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="areage">Areage:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Areage, new { @class = "form-control", @id = "areage" })
+                </div>
+              </div>
+               <br />
+              <div class="form-group">
+                <label class="col-sm-3" for="address">Address:</label>
+                <div class="col-sm-9">
+                    @Html.TextBoxFor(m => m.Address, new { @class = "form-control", @id = "address" })
+                </div>
+              </div>
+               <br />
+            <br/>
+                <input type="submit" value="Create" class="btn btn-default pull-right"/>
+        </form>
+    </div>
 }
 
 @section Scripts {
